--- a/react/package.json
+++ b/react/package.json
@@ -10,20 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.7.1",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@hypertheme-editor/chakra-ui": "^0.1.6-rc.0",
     "axios": "^1.4.0",
     "js-cookie": "^3.0.5",
     "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-datepicker": "^4.14.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.0",
-    "react-router-dom": "^6.11.2",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^6.14.0",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
