--- a/react/package.json
+++ b/react/package.json
@@ -24,8 +24,9 @@
     "react-datepicker": "^4.14.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.0",
-    "react-icons": "^4.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.0",
+    "react-table": "^7.8.0",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
